--- a/src/App.css
+++ b/src/App.css
@@ -73,3 +73,31 @@
 .input-warning {
   color: red;
 }
+
+/* ------------Task List ------------*/
+.taskList {
+  display:flex;
+  flex-wrap: wrap;
+  align-content:flex-start;
+  gap:10px;
+  margin:auto;
+}
+.task {
+  padding:3px;
+  background-color:#dddddd;
+  border: 1px solid red;
+  width:30%;
+  max-width:400px;
+}
+
+.text-center {
+  text-align:center;
+}
+
+.complete {
+  background-color:#dddddd;
+}
+
+.incomplete {
+  background-color:#f4fab6;
+}
