--- a/src/App.css
+++ b/src/App.css
@@ -109,3 +109,12 @@
 .white {
   background-color: white;
 }
+
+.cursor-pointer {
+  cursor: pointer;
+}
+
+input {
+  width: 80%;
+  border:none;
+}
