Add status displays and refresh UI on task creation

--- a/src/App.css
+++ b/src/App.css
@@ -21,10 +21,7 @@
 
 }
 
-.task-creator textarea {
-  width: 100%;
-}
-
+/* ------- Task Creation Form -------*/
 .task-creator {
   background-color: #dddddd;
   padding: 20px;
