--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  margin: 2vw;
+  padding: 2vw;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -19,6 +19,26 @@
   width: 100%;
   height: 1px;
 
+}
+
+/* ----------- Log-In Bar -----------*/
+.log-in-bar {
+  width: 100%;
+}
+.log-in-bar .username-field {
+  width: 65%;
+  height: 5vw;
+  max-height: 30px;
+  border-radius: 50px;
+  text-indent: 5%;
+  border: solid 1px;
+
+}
+.log-in-bar button {
+  width: 25%;
+  height: 5vw;
+  max-height: 30px;
+  border-radius: 5px;
 }
 
 /* ------- Task Creation Form -------*/
